tests/baselines/reference/staticAsIdentifier.errors.txt
tests/cases/compiler/staticAsIdentifier.ts(2,12): error TS1030: 'static' modifier already seen.


==== tests/cases/compiler/staticAsIdentifier.ts (1 errors) ====
    class C {
        static static
               ~~~~~~
!!! error TS1030: 'static' modifier already seen.
        [x: string]: string;
    }